fixed vanishing of stage-selection-clouds on small screens

--- a/app/styles/scenes/_stage_selection.scss
+++ b/app/styles/scenes/_stage_selection.scss
@@ -13,7 +13,7 @@
   img {
     position: absolute;
   }
-  .clouds {
+  .stage-selection-clouds {
     top: 77px;
     left: -50px;
     height: auto;
